fix the z-index

--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -3,6 +3,7 @@ header {
     position: sticky;
     background-color: var(--primary-color);
     top: 0;
+    z-index: 1000;
 }
 
 .header__mobile-nav {
